<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".controller.MainActivity"
        tools:layout_editor_absoluteY="81dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif"
            android:text="@string/mainActivity_form_registry"
            android:textColor="@color/colorTextBackgroudDark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/mainActivity_form_registry_cedula"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:textColor="@color/colorTextBackgroudDark"
            android:drawableLeft="@drawable/ic_user_id"/>


        <EditText
            android:id="@+id/labelFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/mainActivity_form_registry_first_name"
            android:inputType="textCapWords"
            android:textColor="@color/colorTextBackgroudDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ID"
            android:drawableLeft="@drawable/ic_user_names"/>

        <EditText
            android:id="@+id/labelSecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/mainActivity_form_registry_second_name"
            android:inputType="textCapWords"
            android:textColor="@color/colorTextBackgroudDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelFirstName"
            android:drawableLeft="@drawable/ic_user_names"/>


        <!--<Button
            android:id="@+id/btnBirthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/mainActivity_form_registry_birthdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelSecondName"
            android:textColor="@color/colorTextBackgroudDark"/>-->

        <EditText
            android:id="@+id/labelBirthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="160dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="160dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/mainActivity_form_registry_birthdate"
            android:inputType="date"
            android:textColor="@color/colorTextBackgroudDark"
            app:layout_constraintEnd_toStartOf="@+id/labelAge"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelSecondName"
            android:drawableLeft="@drawable/ic_user_calendar"/>

        <EditText
            android:id="@+id/labelAge"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/mainActivity_form_registry_age"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextBackgroudDark"
            app:layout_constraintBaseline_toBaselineOf="@+id/labelBirthdate"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/labelAddress"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/mainActivity_form_registry_address"
            android:inputType="textCapWords"
            android:textColor="@color/colorTextBackgroudDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelBirthdate"
            android:drawableLeft="@drawable/ic_user_house"/>

        <EditText
            android:id="@+id/labelBarrio"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/mainActivity_form_registry_distric"
            android:inputType="textCapWords"
            android:textColor="@color/colorTextBackgroudDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelAddress" />

        <EditText
            android:id="@+id/labelMunicipio"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/mainActivity_form_registry_municipality"
            android:inputType="textCapWords"
            android:textColor="@color/colorTextBackgroudDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelBarrio" />

        <EditText
            android:id="@+id/labelPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/mainActivity_form_registry_phone"
            android:inputType="phone"
            android:singleLine="false"
            android:textColor="@color/colorTextBackgroudDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelMunicipio"
            android:drawableLeft="@drawable/ic_user_phone"/>

        <Button
            android:id="@+id/btnComRegistry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/mainActivity_form_registry_complete_registry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelPhone"
            app:layout_constraintVertical_bias="0.588"
            android:textColor="@color/colorTextBackgroudDark"
            android:textStyle="bold"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/buttonshape"/>

        <!-- <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="28dp"
             android:text="Datos de Residencia"
             android:textColor="@color/colorTextBackgroudDark"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/labelBirthdate" />

         <Spinner
             android:id="@+id/spTypeStreet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="235dp"
             android:layout_marginLeft="32dp"
             android:layout_marginRight="235dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="28dp"
             app:layout_constraintEnd_toStartOf="@+id/editText2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />

         <Spinner
             android:id="@+id/spBis"
             android:layout_width="75"
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="28dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spTypeStreet" />

         <EditText
             android:id="@+id/editText2"
             android:layout_width="175dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:layout_marginTop="28dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

    </android.support.constraint.ConstraintLayout>

</ScrollView>
