<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".controller.LogIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <!--<TextView
                    android:id="@+id/textViewSelect2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/select_login_selection_of_log_in"
                    android:textColor="@color/colorTextBackgroudDark"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />-->

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/elgraneropedro"
                    android:layout_gravity="center"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <!-- Campo para ingresar el correo electronico -->

                <EditText
                    android:id="@+id/label_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/select_login_field_email"
                    android:drawableLeft="@drawable/ic_user_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorTextBackgroudDark" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                app:passwordToggleEnabled = "true">

                <EditText
                    android:id="@+id/label_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/select_login_field_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_user_pass"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorTextBackgroudDark"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/buttons_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/btnlogin"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/select_login_log_in"
                    android:textColor="@color/colorTextBackgroudDark"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons_sign"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/select_login_sign_up"
                    android:textColor="@color/colorTextBackgroudDark"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/btnrecoverPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/select_login_recovery_pass"
                    android:textColor="@color/colorButtonSec"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:focusable="true"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>